Fixed centre col margin on mobile so it doesnt jump up on load. Changed table cell padding so that tables fit more easily on small screens

--- a/themes/ICTheme/static/css/mobile.scss
+++ b/themes/ICTheme/static/css/mobile.scss
@@ -107,7 +107,7 @@ a:visited { }
 
 .center-col {
     float: none;
-    margin: 86px 0 0 0;
+    margin: 75px 0 0 0;
     width: 100%
 }
 
@@ -256,6 +256,7 @@ table.sortable th, table.sortable td {
 table {
  }
 td, th {
+  padding: 0.3rem;
  }
  tbody > tr:nth-child(even) {
  }
